Bumped JLine, JUnit, and ShadowJar